--- a/scss/partials/_reports.scss
+++ b/scss/partials/_reports.scss
@@ -389,3 +389,64 @@ h6.species_title{
     padding:1.0em;
   }
 }
+
+.fixed_img_container img {
+    width: 100%;
+    height: auto;
+}
+
+.river_title h1 {
+    color: rgba(255,255,255,0.8);
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: 0 0 10px rgba(0,0,0,0.6);
+}
+
+#loaded-content{
+  min-height: 120vh;
+  opacity: 1;
+  transition: 2.5s opacity;
+  position:relative;
+}
+#loaded-content.fade-out {
+    opacity: 0;
+    transition: none;
+}
+#spin-loader{
+  // min-height: 100vh;
+  position:absolute;
+  left:0;
+  right:0;
+  top:50%;
+  bottom:0;
+}
+.spinner {
+  width: 40px;
+  height: 40px;
+  background-color: #ececec;
+
+  margin: 100px auto;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+  0% { -webkit-transform: perspective(120px) }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+
+@keyframes sk-rotateplane {
+  0% { 
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+  } 50% { 
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+  } 100% { 
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
