--- a/scss/partials/_reports.scss
+++ b/scss/partials/_reports.scss
@@ -431,6 +431,11 @@ h6.species_title{
   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
   animation: sk-rotateplane 1.2s infinite ease-in-out;
 }
+.kokaneespecies_box{
+  img{
+    display:none; 
+  }
+}
 
 @-webkit-keyframes sk-rotateplane {
   0% { -webkit-transform: perspective(120px) }
