--- a/scss/app.scss
+++ b/scss/app.scss
@@ -44,6 +44,7 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
+@import 'partials/mixins';
 @import 'partials/variables';
 @import 'partials/nav';
 @import 'partials/footer';
