--- a/scss/partials/_reports.scss
+++ b/scss/partials/_reports.scss
@@ -262,6 +262,9 @@ div.hot_flies{
     &:hover{
       background-color: rgba($blackboard, 0.5);
     }
+    @media only screen and (max-width: 1025px) {
+      width:100%
+    }
   }
 }
 .sidebar{
@@ -299,6 +302,31 @@ div.hot_flies{
 /* ============================================================
   SINGLE SECTIONS
 ============================================================ */
+body.page-template-single-report{
+  .river_title{
+    padding-top: 36vh;
+    padding-bottom: 10vh; 
+    @media (max-width:668px) and (min-width:378px) {
+      padding-top: 10vh;
+      padding-bottom: 7vh;
+      display:none;
+    } 
+    @media only screen and (max-width: 400px) {
+        padding-top: 22vh;
+
+    } 
+    @media (max-width:1023px) and (min-width:401px) {
+        padding-top: 22vh;
+
+    }
+  }
+  .sliding_content_container{
+    width:100%;
+    max-width: 100%!important;
+    padding-top: 7vh;
+  }
+}
+
 section.module:last-child {
   margin-bottom: 0;
 }
@@ -306,6 +334,9 @@ section.module h2 {
   margin-bottom: 40px;
   font-family: "Roboto Slab", serif;
   font-size: 30px;
+}
+h2#lower_title{
+  margin-bottom: 5px;
 }
 section.module p {
   margin-bottom: 40px;
@@ -395,20 +426,25 @@ h6.species_title{
     left: 0;
     right: 0;
     z-index: -1;
+    img{
+      width:100%;
+      height:auto;
+    }
+    @media (max-width:668px) and (min-width:378px) {
+      position:relative;
+    }
 }
 
-.river_title{
-  padding-top: 30vh;
-}
-.sliding_content_container{
-  width:100%;
-  max-width: 100%!important;
-  padding-top: 20vh;
-}
+
+
+
 .report_page_content{
   background-color: #fff;
   padding:40px 4.0em!important;
   @include clearfix;
+  @media only screen and (max-width: 1025px) {
+    padding:40px 1.0em!important;
+  }
 }
 .river_title h1 {
     color: rgba(255,255,255,0.8);
@@ -454,14 +490,6 @@ h6.species_title{
 
 .river_header{
   position:relative;
-  // .fixed_img_container{
-  //   position:absolute;
-  //   top:0;
-  //   left:0;
-  //   right:0;
-  //   bottom:0;
-  //   z-index: 100;
-  // }
   .river_title{
     z-index: 200;
     position: absolute;
