--- a/scss/partials/_staff.scss
+++ b/scss/partials/_staff.scss
@@ -70,4 +70,11 @@ body.single-staff{
 	section.module.parallax h1{
 		    text-shadow: 0 0 10px rgba(0,0,0,0.7);
 	}
+	.sliding_content_container {
+	    width: 100%;
+	    max-width: 100% !important;
+	    margin-top: 15vh;
+	    background-color: #fff;
+	    padding-top:40px;
+	}
 }
