--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,6 +2,7 @@
 $primayHeaderFont: 'Lato', sans-serif;
 $primayBodyFont: 'Lato', sans-serif;
 $secondayHeaderFont: 'Lato', sans-serif;
+$reportHeaderFont: 'Passion One', sans-serif;
 
 //Custom Breakpoints
 $dropscreen: new-breakpoint(max-width 1600px);
