--- a/scss/partials/_reports.scss
+++ b/scss/partials/_reports.scss
@@ -312,11 +312,13 @@ body.page-template-single-report{
       display:none;
     } 
     @media only screen and (max-width: 400px) {
-        padding-top: 34vh;
+        // padding-top: 34vh;
+        display:none;
 
     } 
     @media (max-width:1023px) and (min-width:401px) {
-        padding-top: 36vh;
+        // padding-top: 36vh;
+        display:none;
 
     }
   }
@@ -436,10 +438,17 @@ h6.species_title{
     @media (max-width:668px) and (min-width:378px) {
       position:relative;
     }
+    @media only screen and (max-width: 768px) {
+      position:relative;
+    }
 }
 
 
-
+@media only screen and (max-width: 669px) {
+ .river_title{
+      display:none;
+  }
+}
 
 .report_page_content{
   background-color: #fff;
