--- a/scss/partials/_staff.scss
+++ b/scss/partials/_staff.scss
@@ -76,12 +76,16 @@ body.single-staff{
 	    margin-top: 15vh;
 	    background-color: #fff;
 	    padding-top:40px;
+	    @media only screen and (max-width: 768px) {
+	    	margin-top: 0;
+	    }
 	}
 	 @media only screen and (max-width: 768px) {
 	 	.river_title{
 	 		h1{
 	 			visibility:hidden;
 	 		}
+	 		display: none;
 	 	}
 	 }
 }
